crates/cyrs-syntax/tests/snapshots/syntax_snapshots__expr_function_call_distinct.snap
---
source: crates/cyrs-syntax/tests/syntax_snapshots.rs
expression: "format_with_errors(\"MATCH (n) RETURN count(DISTINCT n)\")"
---
SOURCE_FILE@0..34
  STATEMENT@0..34
    MATCH_CLAUSE@0..9
      MATCH_KW@0..5 "MATCH"
      PATTERN@5..9
        PATTERN_PART@5..9
          NODE_PATTERN@5..9
            WHITESPACE@5..6 " "
            L_PAREN@6..7 "("
            NAME@7..8
              IDENT@7..8 "n"
            R_PAREN@8..9 ")"
    RETURN_CLAUSE@9..34
      WHITESPACE@9..10 " "
      RETURN_KW@10..16 "RETURN"
      RETURN_BODY@16..34
        RETURN_ITEMS@16..34
          RETURN_ITEM@16..34
            FUNCTION_CALL@16..34
              VAR_EXPR@16..22
                WHITESPACE@16..17 " "
                COUNT_KW@17..22 "count"
              L_PAREN@22..23 "("
              DISTINCT_KW@23..31 "DISTINCT"
              ARG_LIST@31..33
                VAR_EXPR@31..33
                  WHITESPACE@31..32 " "
                  IDENT@32..33 "n"
              R_PAREN@33..34 ")"
